# VercelCpp

./: CMakeLists.txt
VercelDeployService/: CMakeLists.txt  compileandrun.sh  package-lock.json  package.json
VercelDeployService/include/: aws.h
VercelDeployService/node/: download-bridge.js  download.js  upload-bridge.js  upload.js
VercelDeployService/src/: main.cpp
VercelUploadService/: CMakeLists.txt  build.sh  compileandrun.sh  package-lock.json  package.json
VercelUploadService/include/: FilesHandler.h  HttpController.h  UUID.h  aws.h
VercelUploadService/node/: aws.js  upload-bridge.js
VercelUploadService/node/sec/: keys.js
VercelUploadService/src/: HttpController.cpp  UUID.cpp  main.cpp
include/: HttpController.h  S3Manager.h
src/: FilesHandler.cpp  HttpController.cpp  S3Manager.cpp  main.cpp
